[package]
name = "stimstation"
version = "0.1.0"
edition = "2021"

[lib]
name = "stimstation"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stimstation"
path = "src/main.rs"

[dependencies]
# Core dependencies (work on all platforms)
rand = "0.8.5"
ab_glyph = "0.2"
once_cell = "1.19"
glam = "0.27.0"
palette = "0.7.3"

# Optional dependencies
plotters = { version = "0.3.7", optional = true }
macroquad = { version = "0.4.14", optional = true }
image = { version = "0.25.6", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only dependencies
pixels = "0.15.0"
winit = "0.29.15"
winit_input_helper = "0.16.0"
rodio = "0.20.1"
font-kit = "0.14.2"
glyphon = "0.5.0"
rayon = "1.8.0"
dirs = "6.0.0"
reqwest = { version = "0.12.20", features = ["default", "stream"] }
tokio = { version = "1.42.0", features = ["rt", "macros"] }
futures = "0.3.31"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-only dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Performance",
    "console",
] }

[features]
visual-proofs = ["plotters", "macroquad", "image"]
default = []
